if(NOT OSG_FOUND OR NOT OSGDB_FOUND OR
   NOT SDL2_FOUND OR NOT ANTTWEAKBAR_FOUND OR
   NOT OSGDB_FOUND)
   return()
endif()


set(APP_NAME geViewer)

project(${APP_NAME})

set(APP_SOURCES
  main.cpp
  )

set(APP_INCLUDES
  )

add_executable(${APP_NAME} ${APP_SOURCES} ${APP_INCLUDES})

include_directories(
  ${GLEW_INCLUDE_DIR}
  ${OPENGL_INCLUDE_DIR}
  ${SDL2_INCLUDE_DIR}
  ${ANTTWEAKBAR_INCLUDE_DIR}
  ${OSG_INCLUDE_DIR}
  ${OSGDB_INCLUDE_DIR}
  )

target_link_libraries(${APP_NAME}
  geRG
  geGL
  geUtil
  ${GLEW_LIBRARY}
  ${OPENGL_LIBRARY}
  ${SDL2_LIBRARY}
  ${ANTTWEAKBAR_LIBRARY}
  ${X11_LIBRARIES}
  ${OSG_LIBRARY}
  ${OSGDB_LIBRARY}
  )
